chore(makefile): ensure database is up before integration tests

--- a/project-portal/project-portal-backend/Makefile
+++ b/project-portal/project-portal-backend/Makefile
@@ -84,7 +84,7 @@ test-coverage:
 test-notifications:
 	$(GOTEST) -v ./internal/notifications/...
 
-test-integration:
+test-integration: db-up
 	$(GOTEST) -v ./internal/health/...
 
 # Lint and format
