--- a/corporate-platform/corporate-platform-backend/package.json
+++ b/corporate-platform/corporate-platform-backend/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^17.3.1",
     "ioredis": "^5.4.1",
     "joi": "^17.13.3",
+    "kafkajs": "^2.2.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
